--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 		<link rel="stylesheet" href="css/webrenderer.css">
 		<link rel="stylesheet" href="css/colorpicker.css">
 		<link rel="stylesheet" href="css/index.css">
+	 
+		<script src="js/colorpicker.js"></script>
+			
 		<link rel="shortcut icon" href="#">
 	</head>
 	<body>
-	<div style = "display:flex; justify-content: center;">
+	<div style = "display:flex; justify-content: center;">    
 		<div style = "width: 80%; position: relative;">
 			<div id = "loadingcontainer">
 				<!--image id="loadingGif" class = "loading" src = "img/loading.gif"-->
@@ -26,16 +29,16 @@
 		<div>
 			<input type="radio" id="none" onchange="chooseClippingPlane(this);" name="clipping" value="0" checked>
 			<label for="none">none</label><br>
-
+		
 			<input type="radio" id="viewaligned" onchange="chooseClippingPlane(this);" name="clipping" value="1">
 			<label for="viewaligned">view aligned</label><br>
-
+		
 			<input type="radio" id="x" onchange="chooseClippingPlane(this);" name="clipping" value="2">
 			<label for="x">x Axis</label><br>
-
+		
 			<input type="radio" id="y" onchange="chooseClippingPlane(this);" name="clipping" value="3">
 			<label for="y">y Axis</label><br>
-
+		
 			<input type="radio" id="z" onchange="chooseClippingPlane(this);" name="clipping" value="4">
 			<label for="z">z Axis</label><br>
 		<div>
@@ -87,8 +90,9 @@
 		<input type="color" id="background_color" oninput ="updateColor(this);" name="background_color" value="#000000">
 		<label for="background_color">Background Color</label>
 	</div>
+	<!--<div id="like_button_container"></div>-->
 	</div>
-	<div>
+	<div>    
 		<div class="row">
 			<div class="logo">
 				<img src="img/kaust.png" />
@@ -98,9 +102,18 @@
 				<!--<input type="checkbox" id="control_enable_ao" checked onclick="aoEnabledHandler(this);" >Enable Ambient Occlusion</input>-->
 				<!--<input type="checkbox" id="control_enable_imgui" checked onclick="imGuiCheckedHandler(this);" >Show ImGui</input>-->
 				<br/>
-			</div>
+			</div>        
 		</div>
 	</div>
 	<script src="handler.js" type='text/javascript'></script>
+	
+	<!-- Load React. -->
+	<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+	<!--
+	<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+	<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>   
+	-->
+	<!-- Load our React component. -->
+	<!--<script src="js/like_button.js"></script>-->
 	</body>
 </html>
