--- a/test.html
+++ b/test.html
@@ -13,14 +13,21 @@
 <body class="text-yellow-100 p-0 m-0">
     <div class="root">
         <div class="menubar bg-bluegray-900 p-0 m-0">
-            <h1 class="px-2 py-0 m-0">VolWeb</h1>
+            <h1 class="px-2 py-0 m-0">Finding Nano-Ötzi: Semi-Supervised Volume Visualization for Cryo-Electron Tomography</h1>
         </div>
         <div class="content p-0 m-0 ">
             <div class="left-panel bg-bluegray-800">
                 <div class="px-2">
-                    <h2 class="mx-0 my-2">Input files:</h2>
-                    <input type="file" id="myfile" onchange="useFileInput(this)" multiple class="hidden" />
-                    <label class="custom-file-label" for="myfile">Select files</label>
+                    <h2 class="mx-0 my-2">Data:</h2>
+                    <div>
+                        <h3 class="mx-0 my-2">Load from disk:</h3>
+                        <input type="file" id="myfile" onchange="useFileInput(this)" multiple class="hidden" />
+                        <label class="custom-file-label" for="myfile">Select files</label>
+                    </div>
+                    <div>
+                        <h3>Demo data:</h3>
+                        <input type="button" id="" onclick="loadDemoData()" value="256" class="data-button bg-bluegray-800 text-yellow-100" />
+                    </div>
                     <hr class="solid mx-0 my-5">
                 </div>
                 <div class="px-2">
@@ -59,25 +66,25 @@
                 </div>
                 <div class="px-2">
                     <h2 class="mx-0 my-2">Transfer functions:</h2>
-                    <div id="tf0" class="my-3">
+                    <div class="my-3">
                         <h3 class="m-0">Spikes:</h3>
-                        <div class="slider-div">
+                        <div id="tf0" class="slider-div">
                             <label for="tf0_ramp_low" class="mx-2">Ramp:</label>
                             <input type="range" min="0" max="100" value="0" oninput="adjustTransferFunction2(this);" class="slider" id="tf0_ramp_low" />
                             <input type="color" id="tf0_color" oninput ="adjustTransferFunction2(this);" name="tf0_color" value="#cf1f60" class="p0 mx-5 colorpicker">
                         </div>
                     </div>
-                    <div id="tf1" class="my-3">
+                    <div class="my-3">
                         <h3 class="m-0">Membrane:</h3>
-                        <div class="slider-div">
+                        <div id="tf1" class="slider-div">
                             <label for="tf1_ramp_low" class="mx-2">Ramp:</label>
                             <input type="range" min="0" max="100" value="0" oninput="adjustTransferFunction2(this);" class="slider" id="tf1_ramp_low" />
                             <input type="color" id="tf1_color" oninput ="adjustTransferFunction2(this);" name="tf1_color" value="#c79aab" class="p0 mx-5 colorpicker">
                         </div>
                     </div>
-                    <div id="tf2" class="my-3">
+                    <div class="my-3">
                         <h3 class="m-0">Lumen:</h3>
-                        <div class="slider-div">
+                        <div id="tf2" class="slider-div">
                             <label for="tf2_ramp_low" class="mx-2">Ramp:</label>
                             <input type="range" min="0" max="100" value="0" oninput="adjustTransferFunction2(this);" class="slider" id="tf2_ramp_low" />
                             <input type="color" id="tf2_color" oninput ="adjustTransferFunction2(this);" name="tf2_color" value="#223378" class="p0 mx-5 colorpicker"> 
@@ -93,11 +100,21 @@
                     </div>
                 </div>
                 <div class="px-2 logo">
-                    <img src="img/KAUST-logo.png" />
+                    <div class="py-3 text-center">
+                        <a class="nanovis" href="https://www.nanovis.org" target="_blank">
+                            <span class="nvis">NANOVIS</span> <br />
+                            KAUST Nanovisualization <br /> Research Group
+                        </a>
+                    </div>
+                    <div class="">
+                        <a href="https://www.kaust.edu.sa" target="_blank">
+                            <img class="logo-image" src="img/KAUST-logo.png" />
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="main-panel">
-                <div style="width: 100%; height: 100%; position: relative;">
+            <div class="main-panel" id="main-panel">
+                <div style="width: 100%; height: 100%; position: relative;" class="canvas-container">
                     <div id="loadingcontainer">
                         <!--image id="loadingGif" class = "loading" src = "img/loading.gif"-->
                     </div>
@@ -108,8 +125,7 @@
     </div>
 	<script src="handler.js" type='text/javascript'></script>
 
-    <script src="test.js" type='text/javascript'></script>
-    <script type="module" src="main-test.js"></script>
+    <!-- <script src="test.js" type='text/javascript'></script> -->
 </body>
 
 </html>
