--- a/index.html
+++ b/index.html
@@ -1,119 +1,128 @@
-<!doctype html>
- <base href="/" />
-<html lang="en-us">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
-		<title>VolVis</title>
-		<link rel="stylesheet" href="css/webrenderer.css">
-		<link rel="stylesheet" href="css/colorpicker.css">
-		<link rel="stylesheet" href="css/index.css">
-	 
-		<script src="js/colorpicker.js"></script>
-			
-		<link rel="shortcut icon" href="#">
-	</head>
-	<body>
-	<div style = "display:flex; justify-content: center;">    
-		<div style = "width: 80%; position: relative;">
-			<div id = "loadingcontainer">
-				<!--image id="loadingGif" class = "loading" src = "img/loading.gif"-->
-			</div>
-			<canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()";></canvas>
-		</div>
-		<div>
-			<input type="file" id="myfile" onchange="useFileInput(this)" multiple></input><br>
-		<div>
-		<div>
-			<!--<input type="file" id="myfileStream" onchange="useFileInputChunks(this)" multiple></input><br>-->
-		<div>
-			<input type="radio" id="none" onchange="chooseClippingPlane(this);" name="clipping" value="0" checked>
-			<label for="none">none</label><br>
-		
-			<input type="radio" id="viewaligned" onchange="chooseClippingPlane(this);" name="clipping" value="1">
-			<label for="viewaligned">view aligned</label><br>
-		
-			<input type="radio" id="x" onchange="chooseClippingPlane(this);" name="clipping" value="2">
-			<label for="x">x Axis</label><br>
-		
-			<input type="radio" id="y" onchange="chooseClippingPlane(this);" name="clipping" value="3">
-			<label for="y">y Axis</label><br>
-		
-			<input type="radio" id="z" onchange="chooseClippingPlane(this);" name="clipping" value="4">
-			<label for="z">z Axis</label><br>
-		<div>
-		</div>
-			<input type="checkbox" id="control_clip_volume_a" onclick="clipVolume(this);" value="0" checked>Clip Volume A</input><br>
-			<input type="checkbox" id="control_clip_volume_b" onclick="clipVolume(this);" value="1" checked>Clip Volume B</input><br>
-			<input type="checkbox" id="control_clip_volume_c" onclick="clipVolume(this);" value="2" checked>Clip Volume C</input><br>
-		</div>
-		<div>
-			<input type="checkbox" id="control_enable_volume_a" onclick="enableVolume(0);" value="0" checked>Enable Volume A</input><br>
-			<input type="checkbox" id="control_enable_volume_b" onclick="enableVolume(1);" value="1" checked>Enable Volume B</input><br>
-			<input type="checkbox" id="control_enable_volume_c" onclick="enableVolume(2);" value="2" checked>Enable Volume C</input><br>
-		</div>
-		<div>
-			<input type="range" min="1" max="50" value="25" oninput ="setAnnotationKernelSize(this);" class="slider" id="brush_size">Annotation Brush Size</input><br>
-		</div>
-		<div id="tf0">
-			<p>Transfer Function A</p>
-			<input type="range" min="0" max="100" value="50" value="ramp_low" oninput ="adjustTransferFunction(this);" class="slider" id="tf0_ramp_low">Ramp Low</input><br>
-			<input type="range" min="0" max="100" value="90" value="ramp_high" oninput ="adjustTransferFunction(this);" class="slider" id="tf0_ramp_high">Ramp High</input><br>
-			<input type="color" id="tf0_color" oninput ="adjustTransferFunction(this);" name="tf0_color" value="#e66465">
-			<label for="tf0_color">Color</label>
-			<button type="button" onclick="downloadTF(0)">Save...</button><br>
-		</div>
-		<div id="tf1">
-			<p>Transfer Function B</p>
-			<input type="range" min="0" max="100" value="50" oninput ="adjustTransferFunction(this);" class="slider" id="tf1_ramp_low">Ramp Low</input><br>
-			<input type="range" min="0" max="100" value="90" oninput ="adjustTransferFunction(this);" class="slider" id="tf1_ramp_high">Ramp High</input><br>
-			<input type="color" id="tf1_color" oninput ="adjustTransferFunction(this);" name="tf1_color" value="#e66465">
-			<label for="tf1_color">Color</label>
-		</div>
-		<div id="tf2">
-			<p>Transfer Function C</p>
-			<input type="range" min="0" max="``value="50" oninput ="adjustTransferFunction(this);" class="slider" id="tf2_ramp_low">Ramp Low</input><br>
-			<input type="range" min="0" max="100" value="90" oninput ="adjustTransferFunction(this);" class="slider" id="tf2_ramp_high">Ramp High</input><br>
-			<input type="color" id="tf2_color" oninput ="adjustTransferFunction(this);" name="tf2_color" value="#e66465">
-			<label for="tf2_color">Color</label>
-		</div>
-		<div>
-		</div>
-		<div>
-			<!-- ToDo: Change local file upload with download from Ilastik Server -->
-			<!-- <button type="button" onclick="updateMask()">Update Mask...</button><br> -->
-			<input type="range" min="0" max="2" value="0" class="slider" id="updateMaskWhich">Mask</input><br>
-			<input type="file" id="myfileStream" onchange="updateMask(this)"></input><br>
-		</div>
-		<button type="button" onclick="uploadAnnotations()">Upload Annotations...</button><br>
-		<button type="button" onclick="saveScreenshot()">Save Image...</button><br>
-		<input type="color" id="background_color" oninput ="updateColor(this);" name="background_color" value="#000000">
-		<label for="background_color">Background Color</label>
-	</div>
-	<!--<div id="like_button_container"></div>-->
-	</div>
-	<div>    
-		<div class="row">
-			<div class="logo">
-				<img src="img/kaust.png" />
-			</div>
-			<div class="controls">
-				<!-- <input type="file" id="myTranserFunctions" onchange="transferFunctionFileInput(this)" multiple>Load Transfer Functions...</input> -->
-				<!--<input type="checkbox" id="control_enable_ao" checked onclick="aoEnabledHandler(this);" >Enable Ambient Occlusion</input>-->
-				<!--<input type="checkbox" id="control_enable_imgui" checked onclick="imGuiCheckedHandler(this);" >Show ImGui</input>-->
-				<br/>
-			</div>        
-		</div>
-	</div>
-	<script src="handler.js" type='text/javascript'></script>
-	
-	<!-- Load React. -->
-	<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-	<!--
-	<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-	<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>   
-	-->
-	<!-- Load our React component. -->
-	<!--<script src="js/like_button.js"></script>-->
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>NanoÖtzi ... VolWeb - WASM & WebGPU volume visualizer</title>
+    <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.0/themes/arya-blue.css">
+    <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.0/primeflex.css">
+    <link rel="stylesheet" href="./css/index.css" />
+</head>
+
+<body class="text-yellow-100 p-0 m-0">
+    <div id="errorcontainer">
+        <h1>WebGPU not supported.</h1>
+        Use Chorme Canary or Edge Canary.
+    </div>
+    <div class="root">
+        <div class="menubar bg-bluegray-900 p-0 m-0">
+            <a class="title" href="https://arxiv.org/abs/2104.01554" target="_blank">
+                <h1 class="px-2 py-0 m-0">Finding Nano-Ötzi: Semi-Supervised Volume Visualization for Cryo-Electron Tomography</h1>
+            </a>
+        </div>
+        <div class="content p-0 m-0 ">
+            <div class="left-panel bg-bluegray-800">
+                <div class="px-2">
+                    <h2 class="mx-0 my-2">Data:</h2>
+                    <input type="file" id="myfile" onchange="useFileInput(this)" multiple class="hidden" />
+                    <label class="custom-file-label" for="myfile">Select files from disk</label>
+                    <input type="button" id="demodata" onclick="loadDemoData()" class="hidden" />
+                    <label class="custom-file-label" for="demodata">Load demo data</label>
+                    <hr class="solid mx-0 my-5">
+                </div>
+                <div class="px-2">
+                    <h2 class="mx-0 my-2">Displayed volumes:</h2>
+                    <input type="checkbox" id="control_enable_volume_a" onclick="enableVolume(0);" value="0" checked>Spikes</input>
+                    <input type="checkbox" id="control_enable_volume_b" onclick="enableVolume(1);" value="1" checked>Membranes</input>
+                    <input type="checkbox" id="control_enable_volume_c" onclick="enableVolume(2);" value="2" checked>Lumen</input>
+                    <hr class="solid mx-0 my-5">
+                </div>
+                <div class="px-2">
+                    <h2 class="mx-0 my-2">Clipping:</h2>
+                    <div class="my-3">
+                        <h3 class="mx-0 my-2">Clipping plane:</h3>
+                        <input type="radio" id="none" onchange="chooseClippingPlane(this);" name="clipping" value="0" checked>
+                        <label for="none">None</label>
+
+                        <input type="radio" id="viewaligned" onchange="chooseClippingPlane(this);" name="clipping" value="1">
+                        <label for="viewaligned">View-aligned</label><br>
+
+                        <input type="radio" id="x" onchange="chooseClippingPlane(this);" name="clipping" value="2">
+                        <label for="x">YZ-plane</label>
+
+                        <input type="radio" id="y" onchange="chooseClippingPlane(this);" name="clipping" value="3">
+                        <label for="y">XZ-plane</label>
+
+                        <input type="radio" id="z" onchange="chooseClippingPlane(this);" name="clipping" value="4">
+                        <label for="z">XY-plane</label>
+                    </div>
+                    <div class="my-3">
+                        <h3 class="mx-0 my-2">Clipped volumes:</h3>
+                        <input type="checkbox" id="control_clip_volume_a" onclick="clipVolume(this);" value="0" checked>Spikes</input>
+                        <input type="checkbox" id="control_clip_volume_b" onclick="clipVolume(this);" value="1" checked>Membranes</input>
+                        <input type="checkbox" id="control_clip_volume_c" onclick="clipVolume(this);" value="2" checked>Lumen</input>
+                    </div>
+                    <hr class="solid mx-0 my-5">
+                </div>
+                <div class="px-2">
+                    <h2 class="mx-0 my-2">Transfer functions:</h2>
+                    <div class="my-3">
+                        <h3 class="m-0">Spikes:</h3>
+                        <div id="tf0" class="slider-div">
+                            <label for="tf0_ramp_low" class="mx-2">Ramp:</label>
+                            <input type="range" min="0" max="100" value="0" oninput="adjustTransferFunction2(this);" class="slider" id="tf0_ramp_low" />
+                            <input type="color" id="tf0_color" oninput ="adjustTransferFunction2(this);" name="tf0_color" value="#cf1f60" class="p0 mx-5 colorpicker">
+                        </div>
+                    </div>
+                    <div class="my-3">
+                        <h3 class="m-0">Membrane:</h3>
+                        <div id="tf1" class="slider-div">
+                            <label for="tf1_ramp_low" class="mx-2">Ramp:</label>
+                            <input type="range" min="0" max="100" value="0" oninput="adjustTransferFunction2(this);" class="slider" id="tf1_ramp_low" />
+                            <input type="color" id="tf1_color" oninput ="adjustTransferFunction2(this);" name="tf1_color" value="#c79aab" class="p0 mx-5 colorpicker">
+                        </div>
+                    </div>
+                    <div class="my-3">
+                        <h3 class="m-0">Lumen:</h3>
+                        <div id="tf2" class="slider-div">
+                            <label for="tf2_ramp_low" class="mx-2">Ramp:</label>
+                            <input type="range" min="0" max="100" value="0" oninput="adjustTransferFunction2(this);" class="slider" id="tf2_ramp_low" />
+                            <input type="color" id="tf2_color" oninput ="adjustTransferFunction2(this);" name="tf2_color" value="#223378" class="p0 mx-5 colorpicker"> 
+                        </div>
+                    </div>
+                    <hr class="solid mx-0 my-5">
+                </div>
+                <div class="px-2">
+                    <h2 class="mx-0 my-2">Other settings:</h2>
+                    <div class="slider-div">
+                        <label for="background_color" class="mx-2">Background Color:</label>
+                        <input type="color" id="background_color" oninput ="updateColor(this);" name="background_color" value="#000000" class="p0 mx-5 colorpicker">
+                    </div>
+                </div>
+                <div class="px-2 logo">
+                    <div class="py-3 text-center">
+                        <a class="nanovis" href="https://www.nanovis.org" target="_blank">
+                            <span class="nvis">NANOVIS</span> <br />
+                            KAUST Nanovisualization <br /> Research Group
+                        </a>
+                    </div>
+                    <div class="">
+                        <a href="https://www.kaust.edu.sa" target="_blank">
+                            <img class="logo-image" src="img/KAUST-logo.png" />
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="main-panel" id="main-panel">
+                <div style="width: 100%; height: 100%; position: relative;" class="canvas-container">
+                    <div id="loadingcontainer">
+                        <!--image id="loadingGif" class = "loading" src = "img/loading.gif"-->
+                    </div>
+                    <canvas class="emscripten canvas" id="canvas" oncontextmenu="event.preventDefault();"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+	<script src="./js/handler.js" type='text/javascript'></script>
+</body>
+
 </html>
