--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="root">
         <div class="menubar bg-bluegray-900 p-0 m-0">
             <a class="title" href="https://arxiv.org/abs/2104.01554" target="_blank">
-                <h1 class="px-2 py-0 m-0">Finding Nano-Ötzi: Semi-Supervised Volume Visualization for Cryo-Electron Tomography</h1>
+                <h1 class="px-2 py-0 m-0">Finding Nano-&#214;tzi: Semi-Supervised Volume Visualization for Cryo-Electron Tomography</h1>
             </a>
         </div>
         <div class="content p-0 m-0 ">
