--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>NanoÖtzi ... VolWeb - WASM & WebGPU volume visualizer</title>
+    <title>Nano-&#214;tzi: Cryo-Electron Tomography Visualization Guided by Learned Segmentations</title>
     <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.0/themes/arya-blue.css">
     <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.0/primeflex.css">
     <link rel="stylesheet" href="./css/index.css" />
@@ -16,7 +16,7 @@
     <div class="root">
         <div class="menubar bg-bluegray-900 p-0 m-0">
             <a class="title" href="https://arxiv.org/abs/2104.01554" target="_blank">
-                <h1 class="px-2 py-0 m-0">Finding Nano-&#214;tzi: Semi-Supervised Volume Visualization for Cryo-Electron Tomography</h1>
+                <h1 class="px-2 py-0 m-0">Nano-&#214;tzi: Cryo-Electron Tomography Visualization Guided by Learned Segmentations</h1>
             </a>
         </div>
         <div class="content p-0 m-0 ">
