--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.0/themes/arya-blue.css">
     <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.0/primeflex.css">
     <link rel="stylesheet" href="./css/index.css" />
+    <meta http-equiv="origin-trial" content="AlgH4tkHYsEkj9i3ZhH/qZqQ8Aoqx9RrQ1K9vDhLQZdnS5iaHIBU9GINdWhPXT3oP55b/hR1g74xmWyYHfHJEw4AAABneyJvcmlnaW4iOiJodHRwczovL2NpcmlsYm9oYWsuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJXZWJHUFUiLCJleHBpcnkiOjE2NjM3MTgzOTksImlzU3ViZG9tYWluIjp0cnVlfQ==">
 </head>
 
 <body class="text-yellow-100 p-0 m-0">
