--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.0/themes/arya-blue.css">
     <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.0/primeflex.css">
     <link rel="stylesheet" href="./css/index.css" />
-    <meta http-equiv="origin-trial" content="AhLVwjd0gWvcfPySl8HD2lMuVmZwh3hF53qEgGzZOExHb0n9s+F/1QMvUpPPf81ucS0plwFJrfDaB52/OmpDyAsAAABieyJvcmlnaW4iOiJodHRwczovL3d3dy5uYW5vdmlzLm9yZzo0NDMiLCJmZWF0dXJlIjoiV2ViR1BVIiwiZXhwaXJ5IjoxNjYzNzE4Mzk5LCJpc1N1YmRvbWFpbiI6dHJ1ZX0=">
 </head>
 
 <body class="text-yellow-100 p-0 m-0">
@@ -16,9 +15,7 @@
     </div>
     <div class="root">
         <div class="menubar bg-bluegray-900 p-0 m-0">
-            <a class="title" href="https://arxiv.org/abs/2104.01554" target="_blank">
-                <h1 class="px-2 py-0 m-0">Nano-&#214;tzi: Cryo-Electron Tomography Visualization Guided by Learned Segmentations</h1>
-            </a>
+	    <h1 class="title px-2 py-0 m-0">Nano-&#214;tzi: Cryo-Electron Tomography Visualization Guided by Learned Segmentations</h1>
         </div>
         <div class="content p-0 m-0 ">
             <div class="left-panel bg-bluegray-800">
