--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Nano-&#214;tzi: Cryo-Electron Tomography Visualization Guided by Learned Segmentations</title>
+    <title>Finding Nano-&#214;tzi: Cryo-Electron Tomography Visualization Guided by Learned Segmentation</title>
     <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.0/themes/arya-blue.css">
     <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.0/primeflex.css">
     <link rel="stylesheet" href="./css/index.css" />
